Telegram api logging. Base install command

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/telescope": "^4.9",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "sentry/sentry-laravel": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
@@ -62,7 +63,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "dev",
