--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^10.2",
         "laravel/socialite": "^5.6",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
