--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/socialite": "^5.6",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
-        "sentry/sentry-laravel": "^3.4"
+        "sentry/sentry-laravel": "^3.4",
+        "spatie/laravel-view-models": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
