Cart sessions. Tests

--- a/.env.testing
+++ b/.env.testing
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pc_shop
+DB_DATABASE=cutcode_shop
 DB_USERNAME=root
 DB_PASSWORD=
 
