--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/socialite": "^5.6",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
+        "lee-to/moonshine": "^1.51",
         "sentry/sentry-laravel": "^3.4",
+        "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-view-models": "^1.5"
     },
     "require-dev": {
